// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating a new modular app via the CLI should create the right tree 1`] = `
"new-modular-app
├─ .editorconfig #1fhdq9z
├─ .gitignore #a6txuw
├─ README.md #146mpth
├─ package.json
└─ yarn.lock"
`;

exports[`Creating a new modular app via the CLI with --empty should create the right tree 1`] = `
"another-new-modular-app
├─ .editorconfig #1fhdq9z
├─ .gitignore #a6txuw
├─ README.md #1j7uciv
├─ package.json
└─ yarn.lock"
`;
